fix text align on works section

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -56,7 +56,7 @@
 }
 .works-page-link {
   padding-top: 0.4rem;
-  text-align-last: center;
+  text-align: center;
 }
 
 .site-footer {
